force-app/main/default/objects/Volunteer_Criteria__c/Volunteer_Criteria__c.object-meta.xml
<CustomObject>
    <description>Recording of all eligibility criteria for volunteers in the organisation.</description>
    <label>Volunteer Criteria</label>
    <nameField>
        <label>Volunteer Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>