force-app/main/default/objects/Volunteer_Criteria__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <inlineHelpText>Defines where it sits on Volunteer Portal home page.</inlineHelpText>
    <label>Criteria Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certifications</fullName>
            </value>
            <value>
                <fullName>Online Learning</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>License</fullName>
                <isActive>false</isActive>
                <label>License</label>
            </value>
            <value>
                <fullName>Policy</fullName>
                <isActive>false</isActive>
                <label>Policy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>