force-app/main/default/objects/Volunteer_Criteria__c/fields/Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date__c</fullName>
    <inlineHelpText>Date criteria was made inactive/expired.</inlineHelpText>
    <label>Inactive Date</label>
    <type>Date</type>
</CustomField>