force-app/main/default/objects/Volunteer_Criteria__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <description>Reason why criteria is no longer used/active.</description>
    <label>Inactive Reason</label>
    <type>TextArea</type>
</CustomField>