force-app/main/default/objects/Volunteer_Criteria__c/fields/Litmos__c.field-meta.xml
<CustomField>
    <fullName>Litmos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this course is in Litmos</inlineHelpText>
    <label>Litmos</label>
    <type>Checkbox</type>
</CustomField>