force-app/main/default/objects/Volunteer_Criteria__c/fields/Litmos_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Course_Code__c</fullName>
    <inlineHelpText>The course ID in Litmos</inlineHelpText>
    <label>Litmos Course Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>