force-app/main/default/objects/Volunteer_Criteria__c/fields/Volunteer_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Criteria it was replaced by for version history.</inlineHelpText>
    <label>Replaced by:</label>
    <referenceTo>Volunteer_Criteria__c</referenceTo>
    <relationshipLabel>Volunteer Criteria</relationshipLabel>
    <relationshipName>Volunteer_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>