force-app/main/default/objects/Volunteer_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Litmos__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Criteria_Type__c</columns>
    <columns>Criteria_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>