force-app/main/default/objects/Volunteer_Criteria__c/listViews/Criteria_Course_Code.listView-meta.xml
<ListView>
    <fullName>Criteria_Course_Code</fullName>
    <columns>NAME</columns>
    <columns>Criteria_Type__c</columns>
    <columns>Litmos_Course_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Criteria_Type__c</field>
        <operation>equals</operation>
        <value>Online Learning</value>
    </filters>
    <label>Criteria Course Code</label>
</ListView>